// file: proto/gcommon/v1/organization/organization_settings.proto
// version: 1.0.0
// guid: 16cd3cd6-4780-44b7-96c0-facf112a08bc

edition = "2023";

package gcommon.v1.organization;

import "gcommon/v1/common/key_value.proto";
import "gcommon/v1/organization/billing_settings.proto";
import "gcommon/v1/organization/compliance_settings.proto";
import "gcommon/v1/organization/feature_flag.proto";
import "gcommon/v1/organization/integration_settings.proto";
import "gcommon/v1/organization/notification_settings.proto";
import "gcommon/v1/organization/security_settings.proto";
import "gcommon/v1/organization/ui_settings.proto";
import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/organization";

message OrganizationSettings {
  // Organization identifier
  string organization_id = 1;

  // Security and authentication settings
  SecuritySettings security = 2;

  // User interface and experience settings
  UISettings ui = 3;

  // Integration and API settings
  IntegrationSettings integrations = 4;

  // Notification and communication settings
  OrganizationNotificationSettings notifications = 5;

  // Billing and subscription settings
  BillingSettings billing = 6;

  // Data retention and compliance settings
  OrganizationComplianceSettings compliance = 7;

  // Feature flags and experimental features
  repeated FeatureFlag feature_flags = 8;

  // Custom organization-specific settings
  repeated gcommon.v1.common.KeyValue custom_settings = 9 [lazy = true];

  // Settings last update timestamp
  google.protobuf.Timestamp updated_at = 10 [lazy = true];

  // User ID who last updated these settings
  string updated_by = 11;
}
